<?xml version="1.0" encoding="utf-8"?><!-- Layout to use dataBinding and viewBinding-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoeModel"
            type="com.example.shoestoreinventory.ShoeViewModel" />
    </data>
    <!-- ScrollView helps to scroll if the screen of mobile doesn't match the design-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- ConstraintLayout contains 4 textViews, 4 editViews and 2 buttons to describe shoe detail screen-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            tools:context=".shoeDetail.ShoeDetailFragment">

            <TextView
                android:id="@+id/tvShoeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shoe_name"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/etShoeName"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etShoeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:hint="@string/enter_shoe_name"
                android:inputType="text"
                android:text="@={shoeModel.detail.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvShoeCompany"
                app:layout_constraintTop_toBottomOf="@+id/tvShoeName"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/tvShoeCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/shoe_company"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/etShoeCompany"
                app:layout_constraintTop_toBottomOf="@+id/etShoeName" />

            <EditText
                android:id="@+id/etShoeCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:hint="@string/enter_shoe_company"
                android:inputType="text"
                android:text="@={shoeModel.detail.company}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvShoeSize"
                app:layout_constraintTop_toBottomOf="@+id/tvShoeCompany"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/tvShoeSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/shoe_size"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/etShoeSize"
                app:layout_constraintTop_toBottomOf="@+id/etShoeCompany" />

            <EditText
                android:id="@+id/etShoeSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:hint="@string/enter_shoe_size"
                android:inputType="number"
                android:text="@={shoeModel.detail.size}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvShoeDescription"
                app:layout_constraintTop_toBottomOf="@+id/tvShoeSize"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/tvShoeDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/description"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/etShoeDescription"
                app:layout_constraintTop_toBottomOf="@+id/etShoeSize" />

            <EditText
                android:id="@+id/etShoeDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:hint="@string/enter_shoe_description"
                android:inputType="text"
                android:text="@={shoeModel.detail.description}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/save_button"
                app:layout_constraintTop_toBottomOf="@+id/tvShoeDescription"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/save_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/cancel_button"
                app:layout_constraintTop_toBottomOf="@+id/etShoeDescription" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/cancel_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/save_button"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="TouchTargetSizeCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>